proj1/tests/other-tests/oskis-angels_tests/regexperts_tests/correct/expr_if_else.py
print 1 if True else False

def f():
	for i in range(2):
		print 0 if 0 else 1
	return 1 if 1+1==2 else []
